@startuml

title __DATA's Class Diagram__\n

  namespace  {
    namespace fki.data {
      class dfki.data.DataPoint {
          - timeStampMs : long
          + DataPoint()
          + DataPoint()
          + getTimeStampMs()
          + getValue()
          + setTimeStampMs()
          + setValue()
          + toString()
          + withKey()
          + withNewKeyAndValue()
          + withNewValue()
      }
    }
  }
  

  namespace  {
    namespace fki.data {
      class dfki.data.KeyedDataPoint {
          - key : String
          + KeyedDataPoint()
          + KeyedDataPoint()
          + getKey()
          + setKey()
          + toString()
          + withNewValue()
      }
    }
  }
  

  namespace  {
    namespace fki.data {
      class dfki.data.MimicWaveData {
          + key : String
          - ABPDias : Double
          - ABPMean : Double
          - ABPSys : Double
          - CVP : Double
          - HR : Double
          - NBPDias : Double
          - NBPMean : Double
          - NBPSys : Double
          - PAPDias : Double
          - PAPMean : Double
          - PAPSys : Double
          - Pulse : Double
          - Resp : Double
          - SpO2 : Double
          - recordId : String
          - resultCEP : Double
          - timeStampMs : Long
          + MimicWaveData()
          + MimicWaveData()
          + getABPDias()
          + getABPMean()
          + getABPSys()
          + getCVP()
          + getHR()
          + getKey()
          + getNBPDias()
          + getNBPMean()
          + getNBPSys()
          + getPAPDias()
          + getPAPMean()
          + getPAPSys()
          + getPulse()
          + getRecordId()
          + getResp()
          + getResultCEP()
          + getSpO2()
          + getTimeStampMs()
          + setABPDias()
          + setABPMean()
          + setABPSys()
          + setCVP()
          + setHR()
          + setKey()
          + setNBPDias()
          + setNBPMean()
          + setNBPSys()
          + setPAPDias()
          + setPAPMean()
          + setPAPSys()
          + setPulse()
          + setRecordId()
          + setResp()
          + setResultCEP()
          + setSpO2()
          + setTimeStampMs()
          + toString()
      }
    }
  }
  

  dfki.data.DataPoint o-- T : value
  dfki.data.KeyedDataPoint -up-|> dfki.data.DataPoint


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
